--- a/gb/19/6/6/n11303701.md
+++ b/gb/19/6/6/n11303701.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dwfgyx2217/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>房峰辉张阳上位内幕被曝光</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/06/zhang-yang-GettyImages-653466810-1-600x400_meitu_1-e1512148443978.jpg" />
 <h6>中共前军委委员张阳（左）及房峰辉。(Lintao Zhang/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2019年06月06日讯】日前，陆媒披露了中共前军委委员，前政治工作部主任<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E5%BC%A0%E9%98%B3.md">张阳</a>、前军委联合参谋部参谋长<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%88%BF%E5%B3%B0%E8%BE%89.md">房峰辉</a>分别借<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E9%83%AD%E4%BC%AF%E9%9B%84.md">郭伯雄</a>、<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E5%BE%90%E6%89%8D%E5%8E%9A.md">徐才厚</a>上位的细节。</p>
+<p>【大纪元2019年06月06日讯】日前，陆媒披露了中共前军委委员，前政治工作部主任<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%BC%A0%E9%98%B3.md#1">张阳</a>、前军委联合参谋部参谋长<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%88%BF%E5%B3%B0%E8%BE%89.md#1">房峰辉</a>分别借<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%83%AD%E4%BC%AF%E9%9B%84.md#1">郭伯雄</a>、<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%BE%90%E6%89%8D%E5%8E%9A.md#1">徐才厚</a>上位的细节。</p>
 <p>6月5日，大陆微信公号“高层发声”发表题为“将军落马记”的文章。该文首发于“i看见公号”，后遭到中共屏蔽。</p>
-<p>这篇文章提到了上述四名落马的中共将军，<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E9%83%AD%E4%BC%AF%E9%9B%84.md">郭伯雄</a>、<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E5%BE%90%E6%89%8D%E5%8E%9A.md">徐才厚</a>在文章中的代号分别是“乡党老郭”、“双人徐”。<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E5%BC%A0%E9%98%B3.md">张阳</a>被指是徐才厚的“嫡系”；<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E6%88%BF%E5%B3%B0%E8%BE%89.md">房峰辉</a>则被指是郭伯雄的“头马”。</p>
+<p>这篇文章提到了上述四名落马的中共将军，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%83%AD%E4%BC%AF%E9%9B%84.md#1">郭伯雄</a>、<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%BE%90%E6%89%8D%E5%8E%9A.md#1">徐才厚</a>在文章中的代号分别是“乡党老郭”、“双人徐”。<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%BC%A0%E9%98%B3.md#1">张阳</a>被指是徐才厚的“嫡系”；<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%88%BF%E5%B3%B0%E8%BE%89.md#1">房峰辉</a>则被指是郭伯雄的“头马”。</p>
 <p>文章表示，在部队任作训科科长时，房峰辉就利用手里的权力，用部队的木料，给部队领导做了一套家具。虽然后来被人举报，但不了了之。之后靠着这种功夫，房峰辉在部队混得风生水起。20年时间，从一名基层战士，一步步爬到了新疆军区步兵第4师师长的位置，相当于地方上的副厅级。</p>
 <p>1996年5月，45岁的房峰辉任兰州军区21集团军参谋长，一年后转任21集团军军长，成为当时较年轻的集团军军长。1997年，郭伯雄回到自己的发迹地兰州军区任司令员，两人是上下级关系。</p>
 <p>由于二人老家同是陕西咸阳，房峰辉称郭伯雄为乡党老郭姐夫。文章描述，乡党老郭比房峰辉年长9岁，他的到来，无疑给房插上了腾飞的翅膀。乡党老郭回到兰州军区的第二年，房峰辉就晋升为少将军衔；再一年，又升任21军军长，位列正军级。跟随着郭的节拍，房峰辉的军中仕途越走越快。</p>
@@ -28,42 +28,42 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/19/6/6/n11303701.htm">房峰辉张阳上位内幕被曝光</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/6/5/n10457052.htm">大学学习：做好这九步 成功完成作业（三）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/29/n10437043.htm">大学学习：做好这九步 成功完成作业（二）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/23/n10419796.htm">大学学习：做好这九步 成功完成作业（一）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/9/n10203031.htm">12年级毕业成为大一新生 你要注意什么</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/5/15/n9146146.htm">英国大学考试季“驾到” 考前冲刺有妙招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/1/19/n8721729.htm">写作关联力：品格篮球队</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/20/n8414529.htm">大学生活宝鉴（8）：大学生必备技能 如何做阅读笔记</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/5/n8368603.htm">大学生活宝鉴（7）：大学生阅读学术论文的必备技能</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/23/n8229165.htm">大学生活宝鉴（5）：大学生如何管理学习压力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/8/n8180536.htm">大学生活宝鉴（4）：如何应对小组作业中的偷懒者</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11887071.htm">传政治局常委内部分歧 习最终让步推迟两会</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886872.htm">【疫情最前线】港警确诊 北京市委书记传被隔离</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11887149.htm">【拍案惊奇】陆多地爆聚集感染 FBI急订消毒品</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11886970.htm">【一线采访】武汉管控续升级 百姓生活艰难</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879930.htm">专家：中共已是烂摊子 全球将迎来新的中国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884463.htm">北京多家医院爆发新冠肺炎群聚感染</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885738.htm">中共官媒称10万鸭军抗4千亿蝗虫 网民吐槽</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11887149.htm">【拍案惊奇】陆多地爆聚集感染 FBI急订消毒品</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11887894.htm">【十字路口】病毒攻进中南海？中共或瞒新疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/15/n11871826.htm">【罗厨寻味】红烧牛尾</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884340.htm">《花木兰》上映在即 美国影协评级PG-13</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882140.htm">南非狒狒抱幼狮上树 如动画《狮子王》情节</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882976.htm">因长辈的话 黄子佼登记结婚临喊卡</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/2/21/n11060771.md#1">房峰辉判无期 陆媒再点其与郭伯雄关系</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/24/n10805192.md#1">房峰辉张阳被三罪名相同 暗合政变传闻</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/8/19/n10650464.md#1">刘源披露张阳涉案金额巨大 “五毒俱全”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/1/19/n10072397.md#1">张阳自杀后 网曝政工系再有两军官自杀身亡</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dwfgyx2217/djy/blob/master/gb/19/6/6/n11303701.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752911.md#1" target="_blank">智诚：“除夕宴”在恸哭声中进行</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994483.md#1" target="_blank">红斑狼疮病苦十年 她偶遇一纸“心灵药单”</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/6/6/n11303701.htm">房峰辉张阳上位内幕被曝光</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/6/6/n11303701.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
